[package]
name = "tonic-limit-bug"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
futures = "0.3"
prost = "0.6"
structopt = "0.3"
tokio = { version = "0.2.9", features = ["full"] }
tonic = "0.1"

[build-dependencies]
tonic-build = "0.1"
